--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -7,10 +7,10 @@ output:
   file: "README.md"
   mode: replace
   template: |-
-    # terraform-cloudflare-r2-api-token
+    # Terraform Cloudflare R2 API Token
 
-    Terraform module to create a Cloudflare API token that have bucket scope tokens.
-    
+    Terraform module to create a Cloudflare API token that have bucket scope permissions.
+
     Example:
     ```hcl
     module "r2-api-token" {
