--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,7 +18,7 @@ jobs:
         
         - name: Install Terraform Docs
           run: |
-              go install github.com/terraform-docs/terraform-docs@0.16.0
+              go install github.com/terraform-docs/terraform-docs@v0.17.0
 
         - name: Terraform Docs
           run: |
