--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,16 +4,39 @@ on:
   pull_request:
     branches: [ main ]
 
-jobs: 
+jobs:
+  Linting:
+    runs-on: ubuntu-latest
+    steps:
+        - uses: actions/checkout@v4
+
+        - uses: actions/setup-go@v4
+          with:
+            go-version: '1.20'
+        
+        - uses: hashicorp/setup-terraform@v3
+        
+        - name: Install Terraform Docs
+          run: |
+              go install github.com/terraform-docs/terraform-docs@v0.17.0
+
+        - name: Terraform Docs
+          run: |
+              terraform-docs --output-check .
+        
+        - name: Terraform Format Check
+          run: |
+              terraform fmt -check -recursive
+
   Terraform:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./.github/testing
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: hashicorp/setup-terraform@v2
+      - uses: hashicorp/setup-terraform@v3
 
       - name: Terraform Init
         run: terraform init
@@ -29,6 +52,7 @@ jobs:
 
       - name: Terraform Destroy
         run: terraform destroy -auto-approve -input=false
+        if: always()
         env:
             CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
             TF_VAR_account_id: ${{ secrets.TF_VAR_ACCOUNT_ID }}
