--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,9 +10,10 @@ jobs:
     steps:
         - uses: actions/checkout@v4
 
-        - uses: actions/setup-go@v4
+        - uses: actions/setup-go@v5
           with:
             go-version: '1.20'
+            cache: false
         
         - uses: hashicorp/setup-terraform@v3
         
