--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,20 +10,12 @@ jobs:
     steps:
         - uses: actions/checkout@v4
 
-        - uses: actions/setup-go@v5
-          with:
-            go-version: '1.20'
-            cache: false
-        
         - uses: hashicorp/setup-terraform@v3
-        
-        - name: Install Terraform Docs
-          run: |
-              go install github.com/terraform-docs/terraform-docs@v0.17.0
 
         - name: Terraform Docs
           run: |
-              terraform-docs --output-check .
+              docker run --rm --volume "$(pwd):/terraform-docs" -u $(id -u) quay.io/terraform-docs/terraform-docs:0.18.0 --output-check /terraform-docs
+
         
         - name: Terraform Format Check
           run: |
