--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -25,7 +25,7 @@ output:
     ```
 
     ### Cloudflare provider version support
-
+    6.0 and above uses version 5.13 and above of the Cloudflare provider.
     5.0 and above uses version 5.0 of the Cloudflare provider.  
     4.1.1 and below uses version 4 of the Cloudflare provider.
 
